# rm_sim_26

./: .clang-format  .cz-config.js  CMakeLists.txt  README.md  frames_2025-07-19_12.20.50.gv  package.xml
config/: os_gz_omni.yaml
launch/: rmuc_2025_sim.launch.py  sim.launch.py
moudles/mecanum_car/: model.sdf  robot.urdf
moudles/rmuc_2025/: model.config  model.sdf
worlds/: omni.world  rmuc_2025_world.world
